--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="main">
         <h2>Registration Form</h2>
         <form action="">
-            <label for="first">First Name:</label>
+            <label for="first">Full Name:</label>
             <input type="text" id="first" name="first" required />
 
             <label for="last">Last Name:</label>
