--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>
     <div class="main">
-        <h2>Registration Form</h2>
+        <h2>Sign Up Details</h2>
         <form action="">
             <label for="first">Full Name:</label>
             <input type="text" id="first" name="first" required />
