--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         .main h2 {
-            color: #4caf50;
+            color: #20bef6;
             margin-bottom: 20px;
         }
 
